<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_empresa">EmpresaActivity</string>
    <string name="empresa_detalhes">Sobre a Empresa</string>
    <string name="title_activity_servicos">ServicosActivity</string>
    <string name="servico_detalhe">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamento_projetos">Acompanhamentos e projetos</string>
    <string name="title_activity_cliente">ClienteActivity</string>
    <string name="detalhe_clientes">Nossos Clientes</string>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="texto_contato">Contato</string>
    <string name="texto_email">E-mail: consultoria@atm.com.br</string>
    <string name="texto_telefone">Telefone: (11) 3333-2222</string>
    <string name="texto_celular">Celular: (11) 3333-2222</string>
</resources>
